--- a/index.scss
+++ b/index.scss
@@ -125,7 +125,8 @@
 
         @include mobile{
             flex: 0 0 auto;
-            height: 800px;
+            height: 0;
+            padding-bottom: 180%;
         }
         
     }
@@ -141,10 +142,8 @@
                     left:$right;
                 }
 
-                @if $top{
-                    top:$top;
-                }
-
+                top:$top;
+                
                 @if $IsBig{
                     width: 50%;
                 }@else{
@@ -190,7 +189,7 @@
             bottom: 100px;
 
             @include mobile{
-                bottom: 200px;
+                bottom: 0px;
                 left: 5%;
                 width: 30%;
             }
