--- a/css/index.css
+++ b/css/index.css
@@ -202,7 +202,7 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  height: 1054px;
+  padding-bottom: 100%;
   position: relative;
 }
 
@@ -224,7 +224,7 @@
 .productSlider__item:nth-of-type(1) {
   right: 120px;
   top: 120px;
-  width: 50%;
+  width: 80%;
 }
 
 .productSlider__item:nth-of-type(1) img {
@@ -242,7 +242,7 @@
 .productSlider__item:nth-of-type(2) {
   right: 600px;
   top: 480px;
-  width: 30%;
+  width: 50%;
 }
 
 .productSlider__item:nth-of-type(2) img {
@@ -260,7 +260,7 @@
 .productSlider__item:nth-of-type(3) {
   right: 120px;
   top: 650px;
-  width: 30%;
+  width: 50%;
 }
 
 .productSlider__item:nth-of-type(3) img {
@@ -346,8 +346,8 @@
 }
 
 .productSlider__doodle-line2 {
-  left: -200px;
-  bottom: 100px;
+  left: -360px;
+  bottom: 10%;
 }
 
 @media (max-width: 1200px) {
@@ -392,19 +392,24 @@
   width: 60%;
   margin: 290px auto 0;
   position: relative;
-  height: 700px;
+  height: 0;
+  padding-bottom: 50%;
 }
 
 @media (max-width: 1200px) {
   .collections {
     width: 80%;
+    max-width: 500px;
     margin: 200px auto 0;
+    padding-bottom: calc(min(80% , 500px) + 180px + 100px);
+    max-width: 500px;
   }
 }
 
 .collections__intro {
   position: absolute;
   bottom: 16px;
+  margin-left: 15px;
 }
 
 .collections__introContainer {
@@ -461,16 +466,16 @@
   left: 5%;
   z-index: 100;
   width: 100%;
-  top: 33%;
+  top: 220px;
 }
 
 @media (max-width: 1200px) {
   .collections__content {
     border-radius: 20px;
     left: 0;
-    padding: 0 15px 100%;
-    width: 80%;
-    top: 25%;
+    padding: 0 0 100% 0;
+    width: 90%;
+    top: 180px;
   }
 }
 
@@ -587,8 +592,8 @@
 }
 
 .collections__doodle-earth {
-  top: 75%;
-  left: -150px;
+  margin-top: 10%;
+  left: -200px;
   width: 20%;
   max-width: 150px;
 }
@@ -596,7 +601,9 @@
 @media (max-width: 1200px) {
   .collections__doodle-earth {
     left: 0;
-    width: 40%;
+    width: 70px;
+    max-width: 70px;
+    bottom: 0;
   }
 }
 
@@ -611,8 +618,8 @@
   }
 }
 
-.modalBlock {
-  height: 800px;
+.modelBlock {
+  height: 1000px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -630,47 +637,47 @@
 }
 
 @media (max-width: 1200px) {
-  .modalBlock {
-    height: 500px;
+  .modelBlock {
+    height: 600px;
   }
 }
 
-.modalBlock__doodle-stone {
+.modelBlock__doodle-stone {
   position: absolute;
 }
 
-.modalBlock__doodle-stone:nth-child(1) {
+.modelBlock__doodle-stone:nth-child(1) {
   right: 15%;
   top: 10%;
   width: 50px;
 }
 
-.modalBlock__doodle-stone:nth-child(2) {
+.modelBlock__doodle-stone:nth-child(2) {
   right: 15%;
   top: 80%;
   width: 70px;
 }
 
-.modalBlock__doodle-stone:nth-child(3) {
+.modelBlock__doodle-stone:nth-child(3) {
   right: 80%;
   top: 20%;
   width: 60px;
 }
 
-.modalBlock__3Dmodal {
+.modelBlock__3Dmodel {
   position: absolute;
   z-index: 100;
 }
 
-.modalBlock__3Dmodal img {
+.modelBlock__3Dmodel img {
   width: 500px;
 }
 
-.modalBlock h1 {
+.modelBlock h1 {
   white-space: nowrap;
 }
 
-.modalBlock__logo {
+.modelBlock__logo {
   position: absolute;
   width: 90%;
   z-index: 200;
